--- a/src/sass/components/_button-icon-and-text.scss
+++ b/src/sass/components/_button-icon-and-text.scss
@@ -24,12 +24,13 @@
     }
 
     &--disabled {
-        background-color: $color-grey-light-1;
-        color: $color-grey-light-3;
         cursor: not-allowed;
 
-        &:hover {
-            background-color: $color-grey-light-1;
+        &,
+        &:hover,
+        &:active {
+            background-color: $color-grey-light-2;
+            color: $color-grey-dark-1;
         }
     }
 
