--- a/src/sass/components/_exercise-presenter.scss
+++ b/src/sass/components/_exercise-presenter.scss
@@ -24,6 +24,15 @@
         box-shadow: 0 .5rem 2rem rgba($color-black, 0.05);
     }
 
+    &--disabled {
+        cursor: not-allowed;
+
+        &,
+        &:hover {
+            border-color: $color-grey-dark-2 !important;
+        }
+    }
+
     &__info-box {
         // Starts in order and ends in actions due to the fact that the default component
         // will not show the order number
@@ -86,6 +95,16 @@
 
             &:hover {
                 color: $color-red;
+            }
+        }
+
+        &--disabled {
+            cursor: not-allowed;
+
+            &,
+            &:hover,
+            &:active {
+                color: $color-grey-dark-2 !important;
             }
         }
     }
@@ -155,6 +174,14 @@
         // Center icon vertically
         &__actions-box {
             justify-content: center;
+        }
+
+        &__sets-input {
+            &--disabled {
+                background-color: $color-grey-light-2;
+                color: $color-grey-dark-4;
+                cursor: not-allowed;
+            }
         }
 
     }
