--- a/src/sass/components/_template-creator.scss
+++ b/src/sass/components/_template-creator.scss
@@ -87,6 +87,12 @@
         &:hover {
             border-color: $color-primary-light;
         }
+
+        &--disabled {
+            cursor: not-allowed;
+            background-color: $color-grey-light-2 !important;
+            border-color: $color-grey-light-2 !important;
+        }
     }
 
     &__label {
@@ -113,6 +119,14 @@
     &__confirm-button {
         grid-column: create-button-start / create-button-end;
         grid-row: name-start / description-end;
+    }
+
+    &__available-exercise-wrapper {
+        &--disabled {
+            &>* {
+                cursor: not-allowed !important;
+            }
+        }
     }
 
 
