--- a/src/sass/components/_popup-edit-name-and-description.scss
+++ b/src/sass/components/_popup-edit-name-and-description.scss
@@ -71,6 +71,11 @@
                 color: $color-primary;
             }
         }
+
+        &--disabled {
+            cursor: not-allowed !important;
+            color: $color-grey-dark-2 !important;
+        }
     }
 
     &__input-box {
@@ -106,6 +111,11 @@
 
         &:hover {
             border-color: $color-primary-light;
+        }
+
+        &--disabled {
+            cursor: not-allowed !important;
+            border-color: transparent !important;
         }
     }
 
