Enhance GlobalUserMessagesManager to include timed error message removal and improve styling for better user experience

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2652,6 +2652,8 @@ body {
   background-color: transparent;
   padding: 2rem;
   max-height: 50vh;
+  display: flex;
+  flex-direction: column;
 }
 .global-user-msg-manager__flash-msg-box > *:not(:last-child) {
   margin-bottom: 1rem;
