--- a/src/sass/components/_global-user-msg-manager.scss
+++ b/src/sass/components/_global-user-msg-manager.scss
@@ -9,12 +9,13 @@
     transform: translateX(-50%);
     z-index: 9999;
 
-    // TODO hacer que sea un flex?
-
     background-color: transparent;
     padding: 2rem;
 
     max-height: 50vh;
+
+    display: flex;
+    flex-direction: column;
 
     &>*:not(:last-child) {
       margin-bottom: 1rem;
