--- a/src/sass/components/index.scss
+++ b/src/sass/components/index.scss
@@ -29,3 +29,5 @@
 @forward "chart-workout-volume";
 @forward "flash-message";
 @forward "global-user-msg-manager";
+@forward "current-subscription-presenter";
+@forward "subscription-presenter";
