--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2675,7 +2675,7 @@ body {
   background-color: #dde0de;
   border-radius: 1rem;
   opacity: 0.8;
-  padding: 2rem 4rem;
+  padding: 3rem 4rem;
 }
 .current-subscription-presenter__upper-row {
   display: flex;
@@ -3254,6 +3254,24 @@ body {
 .run-workout-page__finish-button--disabled, .run-workout-page__finish-button--disabled:hover, .run-workout-page__finish-button--disabled:active {
   background-color: #dde0de !important;
   color: #858886 !important;
+}
+
+.subscriptions-page {
+  grid-column: page-start/page-end;
+  grid-row: page-top/page-bottom;
+  padding: 4rem 0;
+  padding-right: 3rem;
+  display: grid;
+  grid-auto-flow: row;
+  grid-auto-rows: min-content;
+  grid-template-columns: repeat(3, 1fr);
+  grid-row-gap: 6rem;
+}
+.subscriptions-page__current-subscription-presenter {
+  grid-column: 1/-1;
+}
+.subscriptions-page__subscription-presenter {
+  grid-column: 2/span 1;
 }
 
 /*# sourceMappingURL=style.css.map */
