--- a/src/sass/pages/_subscriptions-page.scss
+++ b/src/sass/pages/_subscriptions-page.scss
@@ -15,9 +15,11 @@
 
   &__current-subscription-presenter {
     grid-column: 1 / -1;
+    justify-self: center;
   }
 
   &__subscription-presenter {
     grid-column: 2 / span 1;
+    justify-self: center;
   }
 }
