--- a/src/sass/components/_current-subscription-presenter.scss
+++ b/src/sass/components/_current-subscription-presenter.scss
@@ -91,5 +91,9 @@
     font-size: 1.5rem;
     font-weight: 700;
     color: $color-grey-dark-4;
+
+    &--expired-date {
+      color: $color-red;
+    }
   }
 }
